<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.movie.MovieDetailActivity">

    <ScrollView
        android:id="@+id/wrapper_movie"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_detail_poster_movie"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:contentDescription="@string/title_poster"
                android:scaleType="fitXY"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_detail_title_movie"
                style="@style/TextContent.Title.Detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/title_movies"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image_detail_poster_movie" />

            <TextView
                android:id="@+id/text_label_release"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/title_release"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/text_detail_title_movie"
                app:layout_constraintTop_toBottomOf="@+id/text_detail_title_movie" />

            <TextView
                android:id="@+id/text_detail_release_movie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_release"
                app:layout_constraintBottom_toBottomOf="@+id/text_label_release"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.952"
                app:layout_constraintStart_toEndOf="@+id/text_label_release"
                app:layout_constraintTop_toTopOf="@+id/text_label_release"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/text_label_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/rating"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_label_release" />

            <TextView
                android:id="@+id/text_detail_rating_movie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_vertical_margin"
                android:text="@string/rating"
                app:layout_constraintBottom_toBottomOf="@+id/text_label_rating"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/text_label_rating" />

            <TextView
                android:id="@+id/text_label_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/title_overview"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.045"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_label_rating" />

            <TextView
                android:id="@+id/text_detail_overview_movie"
                style="@style/TextContent.Overview"
                android:layout_marginTop="16dp"
                android:text="@string/title_overview"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_label_overview" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/progress_bar_detail_movie"
        style="?android:attr/progressBarStyle"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/wrapper_movie"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/wrapper_movie" />

</androidx.constraintlayout.widget.ConstraintLayout>